# LDRDSANS

./: .gitignore  .gitmodules  LDRDSANS.ipynb  LICENSE  README.md  gitignore_for_notebook.sh
.githooks/: pre-commit
cel7a/initial_runs/1/: CA.names  CA_xtc2binpos.tcl  HA_xtc2binpos.tcl
documents/reports/: report_20170517.pptx
documents/scrkinase/: in_silico_labeling.pptx
experiment/GPSANS_example/: read.py
experiment/r1-85/hrex_md/: centroidsdcd2binpos.tcl  cluster.sh  generatePDBs.tcl  partition_trajectory.py
experiment/r1-85/hrex_md/centroids/: chi2_vs_depth.agr  compare_Rg_chi2.agr  compare_mantid_crysol_fits.agr  fit_crysol.py  (+3 more)
fast_protein_cluster/: CMakeLists.txt
fireworks/localtest/: FW.json  mongod.log.2016-10-20T20-17-51  my_firework.json  my_firework.yaml  test_cluster.py~  test_cluster.sh~
fireworks/remotetest/: cluster_CA.yaml.bak  transfer_CA.yaml  transfer_and_cluster_CA.yaml  transfer_to_SNS.yaml  transfer_toy.yaml
fpch2scph/: fpch2scph.py  navigate.py  plot_linkage_matrix.py
fpch2scph/idpflex/test/: plot_linkage_matrix.py
hiAPP/: cluster.sh
hiAPP/centroids/: centroids.sans.agr  correlate_avrms_avI.py  fit.py  iprofile.py  process_signal.py  sans.sh  scatter_sans.xml
sassena/accounting_for_background/: scatter_sans.xml  scatter_sans_v1.4.1.xml
scrkinase/: fpch2scph.py  make_names.py  plot_linkage_matrix.py  swan_launchpad.yaml  transfer_and_cluster_CA.yaml  xtc2binpos_HA.tcl
scrkinase/kmeans_hierarchy/: cluster.sh  fpch2scph.py  kmeans_cluster.py
scrkinase/kmeans_hierarchy/centroids/: all_rms_vs_i.agr  centroid_rms_vs_i.agr  correlate_avrms_avI.agr  correlate_avrms_avI.py  correlate_rms_I.py  correlate_rms_I.v2.py  iprofile.py
(+2 files in other folders)
